# agent-foundry

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  cli.py  eslint.config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.grounding/: jsonstructure.md  plugin_strategy.md  roadmap.md  workflow.md
agent_foundry/: __init__.py  __main__.py  agent.py  cli.py  constants.py  env.py  provider_impl.py  providers.py  validation.py
agent_foundry/capabilities/: __init__.py  base.py
agent_foundry/capabilities/search/: __init__.py
agent_foundry/capabilities/web/: __init__.py
agent_foundry/cli/: __init__.py  cli.py  commands.py
agent_foundry/plugins/: manager.py
agent_foundry/providers/: __init__.py  base.py  ollama.py  openai.py  registry.py
agent_runtime/: __init__.py  __main__.py  agent.py  core.py  env.py  utils.py  validation.py
agent_runtime/cli/: __init__.py  cli.py  output.py
agent_runtime/config/: __init__.py  hcl_loader.py  loader.py  test_hcl_config.py  var_loader.py
agent_runtime/planners/: __init__.py  base.py  registry.py  stepwise.py
agent_runtime/plugins/: manager.py
agent_runtime/providers/: __init__.py  ollama.py  openai.py  registry.py
agent_runtime/schema/: README.md  agent_schema.json  loader.py  validation.py
agent_runtime/validation/: __init__.py  context.py  schema.py  validators.py
agent_runtime_v2/: __init__.py  pytest.ini  requirements.txt  setup.py
agent_runtime_v2/.grounding_v2/: 01_error_handling.md  02_memory_management.md  03_plugin_system.md  04_capability_framework.md  05_multi_agent_coordination.md  06_conversation_state.md  07_model_provider_enhancements.md  08_security_access_control.md  09_monitoring_logging.md  README.md
agent_runtime_v2/agents/: agent.py
agent_runtime_v2/config/: types.py
agent_runtime_v2/conversation/: context.py  manager.py
agent_runtime_v2/core/: __init__.py
agent_runtime_v2/errors/: __init__.py  handler.py  types.py
agent_runtime_v2/examples/: basic_agent.py
agent_runtime_v2/models/: base.py  openai.py
agent_runtime_v2/plugins/: manager.py
agent_runtime_v2/tests/: conftest.py  test_agent.py  test_conversation.py  test_core.py  test_errors.py  test_openai.py
agentproject/: agent.json  localagent.json  plugins.lock.json
agentproject/local_plugins/test_plugin/: __init__.py
agentproject/plugins/test_plugin/: __init__.py
agentproject2/: agent.hcl  plugins.lock.json
agentproject2/agent_runtime/plugins/: manager.py
agentproject2/local_plugins/echo/: __init__.py
agents/chat-agent/: agent.py  run.py
agents/chat-agent-85a80371/: .env  agent.config.json  main.py
agents/my-agent/: config.json
foundry/: .env  __init__.py  cli.py  foundry_cli.py  setup.py
foundry.egg-info/: SOURCES.txt  entry_points.txt
foundry/foundry/: cli.py
foundry/foundry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
foundry/plugins/: __init__.py
foundry/plugins/foundry_core/: __init__.py  create_agent.py  manage_agents.py  run_agent.py
local_plugins/: __init__.py
local_plugins/code_editor_v2/: __init__.py  test_code_editor.py
project/: agent.hcl  agents.hcl  catfun.py  config.hcl  dev.var.hcl  hello_world.py  models.hcl  moon_phase_calculator.py  plugins.hcl  plugins.lock.json  random.env  runtime.hcl  test.var.hcl  variables.hcl
project/.backups/: agent.hcl.1739479441.491843.bak  agent.hcl.1739480724.8254435.bak
project/local_plugins/code_editor/: __init__.py
project/local_plugins/code_editor_v2/: __init__.py  conftest.py  (+2 more)
tests/: test_agent.py  test_cli.py  test_env.py  test_google_search.py  test_hcl_config.py  test_plugins.py  test_providers.py  test_schema_loader.py  test_schema_validation.py  test_validation.py
(+10 files in other folders)
